[gd_scene load_steps=6 format=3 uid="uid://du26e5thk4fq0"]

[ext_resource type="Texture2D" uid="uid://c064vw75gfid1" path="res://UI/Buttons/button_background.svg" id="1_4yf6e"]
[ext_resource type="Script" path="res://UI/skin_selector.gd" id="1_j3i5v"]
[ext_resource type="Texture2D" uid="uid://6jimbg33yd70" path="res://Player/rocket-base.svg" id="3_6kwsp"]
[ext_resource type="Texture2D" uid="uid://t4tipga3a8c7" path="res://Player/Custom/Colors/blue.svg" id="4_6fa4w"]
[ext_resource type="Texture2D" uid="uid://xo3au7rockv7" path="res://Player/Custom/Textures/apollo.svg" id="5_g0775"]

[node name="SkinSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j3i5v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="BackButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("1_4yf6e")
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Cost" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
text = "Cost = 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="PreviousButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("1_4yf6e")
stretch_mode = 5

[node name="RocketSkin" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Base" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/RocketSkin"]
layout_mode = 0
offset_left = 4.0
offset_right = 352.0
offset_bottom = 664.0
size_flags_horizontal = 3
texture = ExtResource("3_6kwsp")
expand_mode = 1
stretch_mode = 5

[node name="Color" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/RocketSkin"]
layout_mode = 0
offset_left = 4.0
offset_right = 352.0
offset_bottom = 664.0
size_flags_horizontal = 3
texture = ExtResource("4_6fa4w")
expand_mode = 1
stretch_mode = 5

[node name="Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/RocketSkin"]
layout_mode = 0
offset_left = 4.0
offset_right = 352.0
offset_bottom = 664.0
size_flags_horizontal = 3
texture = ExtResource("5_g0775")
expand_mode = 1
stretch_mode = 5

[node name="NextButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("1_4yf6e")
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuyButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1_4yf6e")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/BuyButton" to="." method="_on_buy_button_pressed"]
